namespace py config.autobahn

struct AutobahnConfig {
    1: required string host,
    2: required i32 port,
}